// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input.component renders with minimal props 1`] = `
"<div class=\\"fieldset\\"><div class=\\"sc-bwzfXH jvvHxh row \\"><div class=\\"sc-EHOje ieBshd label\\"><div cols=\\"12\\" class=\\"sc-htpNat cVeGGe 
        
      \\"><label class=\\"sc-bZQynM hFJVkI\\"></label></div></div></div><div class=\\"sc-bwzfXH jvvHxh row \\"><div class=\\"sc-htpNat iNMqHw 
        
      \\"><div class=\\"sc-fjdhpX dybFtm input-container\\"><div class=\\"sc-jzJRlG ecmhww 
                input-wrap 
              \\"><div class=\\"sc-cSHVUG QByXw input-clear-wrap\\"><input id=\\"test-id\\" name=\\"test-id\\" type=\\"text\\" placeholder=\\"\\" autocomplete=\\"off\\" class=\\"sc-kAzzGY lbaeFc 
                    input-default
                  \\" value=\\"\\"></div></div></div></div></div><div class=\\"sc-bwzfXH jvvHxh row \\"><div class=\\"sc-htpNat iNMqHw 
        
      \\"><div class=\\"sc-iwsKbI kKTqkq\\"><div class=\\"sc-gZMcBi kjbvYA\\"></div></div></div></div></div>"
`;

exports[`Input.component renders with props 1`] = `
"<div class=\\"fieldset\\"><div class=\\"sc-bwzfXH jvvHxh row \\"><div class=\\"sc-EHOje ieBshd label\\"><div cols=\\"12\\" class=\\"sc-htpNat cVeGGe 
        
      \\"><label class=\\"sc-bZQynM hFJVkI\\">input label</label></div></div></div><div class=\\"sc-bwzfXH jvvHxh row \\"><div class=\\"sc-htpNat iNMqHw 
        
      \\"><div class=\\"sc-fjdhpX dybFtm input-container\\"><div class=\\"sc-jzJRlG ecmhww 
                input-wrap 
              \\"><div class=\\"sc-cSHVUG QByXw input-clear-wrap\\"><input id=\\"test-id\\" name=\\"test-id\\" type=\\"text\\" placeholder=\\"placeholder test\\" autocomplete=\\"on\\" class=\\"sc-kAzzGY lbaeFc 
                    input-default
                  \\" value=\\"\\"></div></div></div></div></div><div class=\\"sc-bwzfXH jvvHxh row \\"><div class=\\"sc-htpNat iNMqHw 
        
      \\"><div class=\\"sc-iwsKbI kKTqkq\\"><div class=\\"sc-gZMcBi kjbvYA\\"></div></div></div></div></div>"
`;
